<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Salut</string>
    <string name="hello_world">Salut le Monde !</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pied">PiedActivity</string>
    <string name="button_send">C\'est le Pied !</string>
    <string name="bonjour_monde">A pied ou à cheval</string>
    <string name="button_retour">Retour</string>
    <string name="title_activity_palindrome">PalindromeActivity</string>
    <string name="button_palin">PalinDroma</string>
    <string name="hello_palin">Entrez un texte pour voir son palindrome</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="button_contacts">Vers les contacts</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_animal_list">Animals</string>
    <string name="title_animal_detail">Animal Detail</string>
    <string name="button_animals">Animaux</string>
    <string name="button_video">Vidéo</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="action_textmirror">TextMirror</string>
    <string name="action_pied">Pied</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_animaux">Animaux</string>

    <string-array name="planets_array">
        <item>Pied</item>
        <item>Contacts</item>
        <item>Vidéo</item>
        <item>Palindrome</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_traverse">TraverseActivity</string>

</resources>