<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salut.MainActivity" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/totoMongo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
       <Button android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />
    
      <Button android:id="@+id/button_palin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_palin"
        android:onClick="gotoPalin" />
    
      <Button android:id="@+id/button_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_contacts"
        android:onClick="gotoContacts" />
    
      <Button android:id="@+id/button_animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_animals"
        android:onClick="gotoAnimals" />
    
      <Button android:id="@+id/button_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_video"
        android:onClick="gotoVideo" />
    
      
</LinearLayout>
